--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,92 @@
-.container {
-  padding: 0 2rem;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.ul, .ol { list-style: none; }
+
+.header {
+  width: 100vw;
+  height: 100vh;
   display: flex;
+  position: relative;
+  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer {
+.header:before {
+  content: "";
+  width: 100%;
+  z-index: -1;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: grow 60s linear .5s infinite;
+  background: linear-gradient(rgba(103,135,211, .6), rgba(144,25,166, .6)), url("http://res.cloudinary.com/dq5anctrd/image/upload/v1496258351/music-1970040_960_720_nqa715.jpg") no-repeat fixed top center / cover;
+}
+
+.header .nav {
+  width: 100%;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.header .nav .logo { 
+  color: #fff; 
+  font-size: 2em; 
+  text-transform: uppercase; 
+  padding: 20px 20px 10px 20px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.header .nav .logo .a { color: #fff; }
+
+.header .nav .ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.header .nav .li .a {
+  color: #fff;
+  display: block;
+  position: relative;
+  padding: 20px 20px 10px;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.header .nav .li .a:before, .header .nav .li .a:after {
+  content: "";
+  bottom: 0;
+  width: 0px;
+  height: 2px;
+  display: block;
+  position: absolute;
+  background-color: #fff;
+  -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;  
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.header .nav .li .a:before { right: 50%; }
+.header .nav .li .a:after { left: 50%; }
+
+.header .nav .li .a:hover:before , .header .nav .li .a:hover:after {
+  width: 50%;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@keyframes grow {
+  0% { transform: scale(1) rotate(0deg); }
+  50% { transform: scale(1.6) rotate(10deg);}
+}
+
+@-webkit-keyframes grow {
+  0% { transform: scale(1) rotate(0deg); }
+  50% { transform: scale(1.6) rotate(10deg);}
+}
+
+@media only screen and (max-width: 290px) {
+  .header .nav .ul { 
+    width: 100%; 
+    text-align: center;
+    flex-direction: column; 
   }
 }
+
+
