--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,8 @@
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 // body {
@@ -54,6 +56,12 @@ button {
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
+}
+
+.wrapLogin {
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
 button:active {
