--- a/styles/Auth.scss
+++ b/styles/Auth.scss
@@ -90,7 +90,7 @@ input {
 
 input:focus-visible {
     outline: none;
-    border: 1px solid #ff4b2b;
+    border: 1px solid #16a085;
 }
 
 .container {
