--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -1,216 +1,209 @@
-.wave{
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	height: 100%;
-	z-index: -1;
+@import "./variable";
+
+button {
+    border-radius: 20px;
+    border: 1px solid #ff4b2b;
+    background-color: #ff4b2b;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
 }
 
-.container{
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap :7rem;
-    padding: 0 2rem;
+.wrapLogin {
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
-.img{
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+button:active {
+    transform: scale(0.95);
 }
 
-.loginContent{
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	text-align: center;
+button:focus {
+    outline: none;
 }
 
-.img .bg{
-	width: 500px;
+button.devingine {
+    background-color: transparent;
+    border-color: #fff;
 }
 
-.form{
-	width: 360px;
+form {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
 }
 
-.loginContent .imgAvatar{
-    height: 100px;
+.input-login {
+    background-color: #f3f3f3;
+    border: none;
+    padding: 12px 25px;
+    margin: 8px 0;
+    width: 100%;
+    border: 1px solid white;
+    border-radius: 30px;
 }
 
-.loginContent .title{
-	margin: 15px 0;
-	color: #333;
-	text-transform: uppercase;
-	font-size: 2.9rem;
+.input-login:focus-visible {
+    outline: none;
+    border: 1px solid #16a085;
 }
 
-.loginContent .inputDiv{
-	position: relative;
-    display: grid;
-    grid-template-columns: 7% 93%;
-    margin: 25px 0;
-    padding: 5px 0;
-    border-bottom: 2px solid #d9d9d9;
-}
-
-.loginContent .inputDiv.one{
-	margin-top: 0;
-}
-
-.i{
-	color: #d9d9d9;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.i .innerIcon{
-	transition: .3s;
-}
-
-.inputDiv > .boxInput{
+.container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     position: relative;
-	height: 45px;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
+    margin: 0 auto;
 }
 
-.inputDiv > .boxInput > .title{
-	position: absolute;
-	left: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-	color: #999;
-	font-size: 18px;
-	transition: .3s;
+.form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
 }
 
-.inputDiv:before, .inputDiv:after{
-	content: '';
-	position: absolute;
-	bottom: -2px;
-	width: 0%;
-	height: 2px;
-	background-color: #38d39f;
-	transition: .4s;
+.sing-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
 }
 
-.inputDiv:before{
-	right: 50%;
+.container.right-panel-active .sing-in-container {
+    transform: translateX(100%);
 }
 
-.inputDiv:after{
-	left: 50%;
+.sing-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
 }
 
-.inputDiv.focus:before, .inputDiv.focus:after{
-	width: 50%;
+.container.right-panel-active .sing-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6;
 }
 
-.inputDiv.focus > .boxInput > .title{
-	top: -5px;
-	font-size: 15px;
+@keyframes show {
+    0%,
+    49.99% {
+        opacity: 0;
+        z-index: 1;
+    }
+    50%,
+    100% {
+        opacity: 1;
+        z-index: 5;
+    }
 }
 
-.inputDiv.focus > .i > .innerIcon{
-	color: #38d39f;
+.overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    // z-index: ;
 }
 
-.input::focus .title {
-		top: -5px;
-		font-size: 15px;
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
 }
 
-.inputDiv > .boxInput > .input{
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
-	outline: none;
-	background: none;
-	padding: 0.5rem 0.7rem;
-	font-size: 1.2rem;
-	color: #555;
-	font-family: 'poppins', sans-serif;
+.overlay {
+    background: $color-key;
+    background: linear-gradient(to right, $color-key-bold, $color-key);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transition: transform 0.6s ease-in-out;
 }
 
-.inputDiv.pass{
-	margin-bottom: 4px;
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
 }
 
-.forgotPass{
-	display: block;
-	text-align: right;
-	text-decoration: none;
-	color: #999;
-	font-size: 0.9rem;
-	transition: .3s;
+.overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
 }
 
-.forgotPass:hover{
-	color: #38d39f;
+.overlay-left {
+    transform: translateX(-20%);
 }
 
-.btn{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	outline: none;
-	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-	background-size: 200%;
-	font-size: 1.2rem;
-	color: #fff;
-	font-family: 'Poppins', sans-serif;
-	text-transform: uppercase;
-	margin: 1rem 0;
-	cursor: pointer;
-	transition: .5s;
-}
-.btn:hover{
-	background-position: right;
+.container.right-panel-active .overlay-left {
+    transform: translateX(0);
 }
 
-
-@media screen and (max-width: 1050px){
-	.container{
-		grid-gap: 5rem;
-	}
+.overlay-right {
+    right: 0;
+    transform: translateX(0);
 }
 
-@media screen and (max-width: 1000px){
-	.form{
-		width: 290px;
-	}
-
-	.loginContent h2{
-        font-size: 2.4rem;
-        margin: 8px 0;
-	}
-
-	.img img{
-		width: 400px;
-	}
+.container.right-panel-active .overlay-right {
+    transform: translateX(20%);
 }
 
-@media screen and (max-width: 900px){
-	.container{
-		grid-template-columns: 1fr;
-	}
+.social-container {
+    margin: 20px 0;
+}
 
-	.img{
-		display: none;
-	}
+.social-container a {
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
 
-	.wave{
-		display: none;
-	}
+a.social:hover {
+    background: linear-gradient(to right, #ff4b2b, #ff416c);
+    color: #fff;
+}
 
-	.loginContent{
-		justify-content: center;
-	}
+.invalid-feedback{
+  color: red;
+  text-align: left;
+  width: 100%;
+  margin-top: -3px;
+  font-size: 12px;
+  margin-left: 50px;
 }
