--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,11 @@
                     
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@import "./Card.scss";
+@import "./BlogHome.module.scss";
+@import "./CreateBlog.scss";
+@import "./Login.module.scss";
+@import "./variable";
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
@@ -44,214 +50,6 @@ a {
     text-decoration: none;
     margin: 15px 0;
 }
-
-button {
-    border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background-color: #ff4b2b;
-    color: #fff;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
-}
-
-.wrapLogin {
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-button:active {
-    transform: scale(0.95);
-}
-
-button:focus {
-    outline: none;
-}
-
-button.devingine {
-    background-color: transparent;
-    border-color: #fff;
-}
-
-form {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 50px;
-    height: 100%;
-    text-align: center;
-}
-
-input {
-    background-color: #f3f3f3;
-    border: none;
-    padding: 12px 25px;
-    margin: 8px 0;
-    width: 100%;
-    border-radius: 30px;
-}
-
-input:focus-visible {
-    outline: none;
-    border: 1px solid #ff4b2b;
-}
-
-.container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
-    margin: 0 auto;
-}
-
-.form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
-}
-
-.sing-in-container {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-}
-
-.container.right-panel-active .sing-in-container {
-    transform: translateX(100%);
-}
-
-.sing-up-container {
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
-}
-
-.container.right-panel-active .sing-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: show 0.6;
-}
-
-@keyframes show {
-    0%,
-    49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-    50%,
-    100% {
-        opacity: 1;
-        z-index: 5;
-    }
-}
-
-.overlay-container {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: transform 0.6s ease-in-out;
-    // z-index: ;
-}
-
-.container.right-panel-active .overlay-container {
-    transform: translateX(-100%);
-}
-
-.overlay {
-    background: #ff416c;
-    background: linear-gradient(to right, #ff4b2b, #ff416c);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 0;
-    color: #fff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transition: transform 0.6s ease-in-out;
-}
-
-.container.right-panel-active .overlay {
-    transform: translateX(50%);
-}
-
-.overlay-panel {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    transform: translateX(0);
-    transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-    transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-    transform: translateX(0);
-}
-
-.overlay-right {
-    right: 0;
-    transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-    transform: translateX(20%);
-}
-
-.social-container {
-    margin: 20px 0;
-}
-
-.social-container a {
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    height: 40px;
-    width: 40px;
-}
-
-a.social:hover {
-    background: linear-gradient(to right, #ff4b2b, #ff416c);
-    color: #fff;
-}
-
-.invalid-feedback{
-  color: red;
-  text-align: left;
-  width: 100%;
-  margin-top: -3px;
-  font-size: 12px;
-  margin-left: 50px;
-}
-
 
 // Loading
 .balls {
@@ -312,3 +110,19 @@ a.social:hover {
       transform: translateX(100%);
     }
   }
+
+
+//   Card
+
+
+
+// Codepen spesific styling - only to center the elements in the pen preview and viewport 
+.containerCard {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+
