--- a/styles/CreateBlog.scss
+++ b/styles/CreateBlog.scss
@@ -134,6 +134,7 @@
     /* margin-right: 14px; */
     // width: 88px;
     height: 150px;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
