--- a/styles/Auth.scss
+++ b/styles/Auth.scss
@@ -1,5 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import "./variable";
+
 * {
     box-sizing: border-box;
 }
@@ -44,8 +46,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background-color: #ff4b2b;
+    border: 1px solid $color-key;
+    background-color: $color-key;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
