--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -2,8 +2,8 @@
 
 button {
     border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background-color: #ff4b2b;
+    border: 1px solid $color-key;
+    background-color: $color-key;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
@@ -32,16 +32,16 @@ button.devingine {
     border-color: #fff;
 }
 
-form {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 50px;
-    height: 100%;
-    text-align: center;
-}
+// form {
+//     background-color: #fff;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-direction: column;
+//     padding: 0 50px;
+//     height: 100%;
+//     text-align: center;
+// }
 
 .input-login {
     background-color: #f3f3f3;
