update UI create-blog

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,17 +11,17 @@
   flex-direction: column;
 }
 
-.header:before {
-  content: "";
-  width: 100%;
-  z-index: -1;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: grow 60s linear .5s infinite;
-  // background: linear-gradient(rgba(103,135,211, .6), rgba(144,25,166, .6)), url("https://lh3.googleusercontent.com/pw/AM-JKLVuwCz6hEKHyb_ocRT8STyVWRh8EJQNYLOg1b3uqRcNIwhyaWNl-DSsXo7iAN9reBv9DzTAyIANe8cC5zUs0PcEZ8wyS6W_QmgPSsVh67Zw_Z6fbj_hr3ctJ4m0ndP4xjJnhEm-skTD8p1OaGtnv5iU=w1920-h1080-no?authuser=2") no-repeat fixed top center / cover;
-}
+// .header:before {
+//   content: "";
+//   width: 100%;
+//   z-index: -1;
+//   height: 100%;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   animation: grow 60s linear .5s infinite;
+//   // background: linear-gradient(rgba(103,135,211, .6), rgba(144,25,166, .6)), url("https://lh3.googleusercontent.com/pw/AM-JKLVuwCz6hEKHyb_ocRT8STyVWRh8EJQNYLOg1b3uqRcNIwhyaWNl-DSsXo7iAN9reBv9DzTAyIANe8cC5zUs0PcEZ8wyS6W_QmgPSsVh67Zw_Z6fbj_hr3ctJ4m0ndP4xjJnhEm-skTD8p1OaGtnv5iU=w1920-h1080-no?authuser=2") no-repeat fixed top center / cover;
+// }
 
 .header .nav {
   width: 100%;
