--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -32,16 +32,16 @@ button.devingine {
     border-color: #fff;
 }
 
-// form {
-//     background-color: #fff;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     flex-direction: column;
-//     padding: 0 50px;
-//     height: 100%;
-//     text-align: center;
-// }
+form.form-auth {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+}
 
 .input-login {
     background-color: #f3f3f3;
