--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,14 @@
     padding: 0;
 }
 
+.error-notify {
+  color: red;
+  margin-top: -7px;
+  display: block;
+  margin-bottom: 10px;
+  margin-left: 25px;
+}
+
 // body {
 //     background: #f6f5f7;
 //     display: flex;
