--- a/styles/CreateBlog.scss
+++ b/styles/CreateBlog.scss
@@ -1,4 +1,12 @@
 .container-blog {
+    .box-button-create-blog {
+      width: 100%;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+    }
     .box-blog {
         display: flex;
         justify-content: space-between;
@@ -7,15 +15,15 @@
         .box-blog-left {
             width: 60%;
 
-            h3 {
-              padding: 0 50px;
-            }
+            // h3 {
+            //   padding: 0 50px;
+            // }
         }
 
         .box-blog-right {
           display: flex;
           align-items: end;
-          /* justify-content: center; */
+          justify-content: center;
           flex-wrap: wrap;
           width: 40%;
 
@@ -28,6 +36,8 @@
         .wrap-input-create-blog {
             width: 100%;
         }
+
+        
 
         select {
             -webkit-appearance:none;
@@ -58,6 +68,8 @@
             background: #5c6664;
             overflow: hidden;
             border-radius: 14px;
+            font-size: 14px;
+            margin-bottom: 12px;
          }
          .select::after {
             content: '\25BC';
@@ -134,6 +146,7 @@
     /* margin-right: 14px; */
     // width: 88px;
     height: 150px;
+    margin-bottom: 12px;
     cursor: pointer;
     display: flex;
     align-items: center;
