--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -129,8 +129,8 @@ a {
 	width: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-wrap: wrap;
+  padding: 0 20px;
 }
 
 
