--- a/styles/BlogHome.module.scss
+++ b/styles/BlogHome.module.scss
@@ -1,8 +1,10 @@
+@import "./variable";
+
 .category-title {
-    padding: 0 60px;
+    padding: 0 40px;
     position: relative;
     text-transform: uppercase;
-    margin-top: 20px;
+    // margin-top: 20px;
 
     &::after {
         content: "";
@@ -13,6 +15,45 @@
         position: absolute;
         top: -5px;
         /* margin-right: 16px; */
-        left: 38px;
+        left: 20px;
     }
 }
+
+.box-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+
+    .view-more {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: 0.3s;
+        font-weight: bold;
+
+        span {
+            margin-right: 8px;
+        }
+        svg {
+            position: relative;
+            // right: 65px;
+        }
+
+        &:hover {
+            color: $color-key;
+
+            svg {
+                animation: mymove 0.9s ease-in-out infinite;
+            }
+        }
+    }
+}
+
+@keyframes mymove {
+    0% {right: 0px;}
+    50% {right: -10px}
+    // 70% {right: 5px}
+    100% {right: 0px;}
+  }
